 * Ability to define custom SILK formats in codecs.conf.
 * Addition of speex32 audio format with translation.

ConfBridge
--------------------------
 * New highly optimized and customizable ConfBridge application capable of
   mixing audio at sample rates ranging from 8khz-96khz.
 * CONFBRIDGE dialplan function capable of creating dynamic ConfBridge user
   and bridge profiles on a channel.

Dialplan Variables
------------------
 * Added ASTETCDIR, ASTMODDIR, ASTVARLIBDIR, ASTDBDIR, ASTKEYDIR, ASTDATADIR,
   ASTAGIDIR, ASTSPOOLDIR, ASTRUNDIR, ASTLOGDIR which hold the equivalent
   variables from asterisk.conf.

Dialplan Functions
------------------
 * Addition of the JITTERBUFFER dialplan function. This function allows
   for jitterbuffering to occur on the read side of a channel.  By using
   this function conference applications such as ConfBridge and MeetMe can
   have the rx streams jitterbuffered before conference mixing occurs.
 * Added DB_KEYS, which lists the next set of keys in the Asterisk database
   hierarchy.
 * Added STRREPLACE function.  This function let's the user search a variable
   for a given string to replace with another string as many times as the
   user specifies or just throughout the whole string.
 * Added option to CHANNEL(pickupgroup) allow reading and setting the pickupgroup of channel.

libpri channel driver (chan_dahdi) DAHDI changes
--------------------------
 * Added moh_signaling option to specify what to do when the channel's bridged
   peer puts the ISDN channel on hold.
 * Added display_send and display_receive options to control how the display ie
   is handled.  To send display text from the dialplan use the SendText()
   application when the option is enabled.
 * Added mcid_send option to allow sending a MCID request on a span.

Calendaring
--------------------------
 * Added setvar option to calendar.conf to allow setting channel variables on
   notification channels.